--- a/3_openapi_call_scratch.ipynb
+++ b/3_openapi_call_scratch.ipynb
@@ -167,7 +167,7 @@
     }
    ],
    "source": [
-    "template = \"\"\"Analyze the provided review and extract product-related aspects, sentiments (positive/negative/neutral), and justifications. Format the result as a JSON object with the following structure: a key named 'aspects' containing a nested object with keys for each aspect, and each aspect key having an object with 'sentiment' and 'justification' keys. Exclude non-product discussions. If no sentiment is expressed for an aspect, return 'neutral' as the sentiment and 'No information provided' as the justification. If information isn't present, use 'unknown' as the value. If information can't be retrieved, return an empty JSON object. Review{review}\"\"\"\n",
+    "template = \"\"\"Analyze the provided review delimited by <> and extract product-related aspects, sentiments (positive/negative/neutral), and justifications. Format the result as a JSON object with the following structure: a key named 'aspects' containing a nested object with keys for each aspect, and each aspect key having an object with 'sentiment' and 'justification' keys. Exclude non-product discussions. If no sentiment is expressed for an aspect, return 'neutral' as the sentiment and 'No information provided' as the justification. If information isn't present, use 'unknown' as the value. If information can't be retrieved, return an empty JSON object. Review: <{review}>\"\"\"\n",
     "\n",
     "#@title: Function to get sentiment from OpenAI for one review\n",
     "def get_llm_sentiment(model, prompt_template, review):\n",
